A bunch of minor code quality fixes
Signed-off-by: Pablo Herrera <pabloherrerapalacio@gmail.com>