@@ -6,7 +6,6 @@ import java.io.InputStreamReader;
 import java.net.URL;
 import java.net.URLConnection;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 import java.util.PropertyResourceBundle;
@@ -54,6 +53,6 @@ final class UTF8Control extends ResourceBundle.Control {
 
   @Override
   public List<Locale> getCandidateLocales(String name, Locale locale) {
-    return Arrays.asList(Locale.ROOT);
+    return List.of(Locale.ROOT);
   }
 }
